<resources>
    <string name="app_name">IMDemo</string>
    <string name="tab_message">消息</string>
    <string name="tab_contacts">通讯录</string>
    <string name="tab_setting">设置</string>
    <string name="send">发送</string>
    <string name="chat_history">以下是新消息</string>
    <string name="msg_not_support">当前版本不支持展示此消息</string>
    <string name="click_up">点击升级</string>
    <string name="install_new">请安装最新版</string>

    <string name="record_fail">录制失败，请检查您的权限</string>
    <string name="record_too_short">说话时间太短</string>
    <string name="dialog_tips_line2">左滑试听\n右滑取消</string>
    <string name="max_record_length">最长60s</string>
    <string name="press_to_speak">按住说话</string>
    <string name="release_to_send">松开发送</string>
    <string name="recording">&#160;&#160;&#160;正在录音...</string>
    <string name="recording_1">&#160;&#160;&#160;正在录音</string>
    <string name="cancelrecord">手指下滑&#160;取消发送</string>
    <string name="fullscreenrecord_cancel">松开手指&#160;取消发送</string>
    <string name="finish">确定</string>
    <string name="details">详情</string>
    <string name="msg_not_notify">消息免打扰</string>
    <string name="group_members">群成员(%d)</string>
    <string name="select_members">选择人员</string>
    <string name="group_name">群名称</string>
    <string name="quit_group">退出群</string>
    <string name="remove_group">解散群</string>
    <string name="group_name_not_null">群名称不能为空</string>

    <string-array name="full_week">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="yestoday">昨天</string>
    <string name="complete">完成</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="if_resend">是否重新发送？</string>

    <string name="hint_plz_enter_phone_number">"请输入手机号码"</string>
    <string name="hint_plz_enter_passwd">"请输入密码"</string>
    <string name="login">登录</string>
    <string name="edit">编辑</string>
    <string name="loading">正在加载...</string>
    <string name="create_group_loading">正在发起群聊...</string>
    <string name="no_name_group">未命名</string>
</resources>
