<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout style="@style/title_layout_style">

        <com.shinemo.widget.fonticon.FontIcon
            android:id="@+id/back"
            style="@style/back_style"/>

        <TextView
            android:id="@+id/title"
            style="@style/title_textview_style"
            android:text="@string/details"/>
    </RelativeLayout>

    <include layout="@layout/divider"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/member_title"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/white_item_click">

                <TextView
                    android:id="@+id/tv_member_count"
                    style="@style/common_text_item_style"/>

                <com.shinemo.widget.fonticon.FontIcon
                    style="@style/arrow_right_style_rl"/>

            </RelativeLayout>

            <include
                layout="@layout/divider"
                android:background="@color/c_ff"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:paddingLeft="@dimen/activity_horizontal_margin" />

            <LinearLayout
                android:background="@color/c_ff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="48dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/avatar_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <!--<ProgressBar-->
                        <!--android:id="@+id/pbLoading"-->
                        <!--android:paddingBottom="8dp"-->
                        <!--style="?android:attr/progressBarStyle"-->
                        <!--android:layout_width="@dimen/group_avatar_size"-->
                        <!--android:layout_height="@dimen/group_avatar_size" />-->

                    <ImageView
                        android:id="@+id/add_new_member"
                        android:layout_marginTop="8dp"
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_gravity="top"
                        android:background="@drawable/group_set_add" />
                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/white_item_click">

                <TextView
                    style="@style/common_text_item_style"
                    android:text="@string/group_name"/>

                <TextView
                    android:id="@+id/tv_group_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:maxWidth="150dp"
                    android:textColor="@color/s_text_main_color"
                    android:textSize="@dimen/text_size_media"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/white_item_click">

                <TextView
                    style="@style/common_text_item_style"
                    android:text="@string/msg_not_notify"/>

                <com.shinemo.widget.switchbutton.SwitchButton
                    android:id="@+id/msg_not_notify"
                    style="@style/SwitchButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_quit_group"
                    style="@style/common_text_item_style"
                    android:layout_width="match_parent"
                    android:background="@color/c_ff"
                    android:gravity="center"
                    android:text="退出群聊"
                    android:textColor="@color/c_brand" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
